--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,13 +15,12 @@ body {
 a{
   text-decoration: none;
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
 }
 img{
   display: block;
   max-width: 100%;
-  
-  /* width: 200px; */
+  object-fit: cover;
 }
 
 .gallery{
