--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,7 @@ img{
   max-height: 400px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 5px -1px;
   border-radius: 10px;
-  transition: box-shadow 0.3s ease-in;
+  transition: box-shadow 0.3s ease;
 }
 .photo-card:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 0.5px -1px;
