--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@ img{
   display: flex;
   flex-wrap: wrap;
   gap: 10px 20px;
-  padding: 80px 0;
+  padding: 80px 0 40;
   max-width: 1200px;
   margin: 0 auto;
 
@@ -76,4 +76,14 @@ img{
   font-size: 11px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.7);
+}
+
+.load-more{
+  margin: 0 auto;
+  padding: 8px 16px;
+  background-color: darkcyan;
+  color: white;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 20px;
 }
