--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,3 +88,25 @@ img{
   border-radius: 15px;
   margin-bottom: 20px;
 }
+
+.search-form input{
+  height: 30px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  outline: none;
+  border: none;
+  padding: 5px 10px;
+  color: #212121;
+  font-size: 14px;
+  position: relative;
+}
+.search-form button {
+  height: 30px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: none;
+  background-color: white;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
